centrifuge *almost* back to pre-1.8