@@ -19,7 +19,6 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Mixin(Bee.BeeLocateHiveGoal.class)
@@ -30,8 +29,7 @@ public abstract class MixinUpdateBeehiveGoal {
     @Shadow(aliases = "field_226485_b_")
     private Bee this$0;
 
-    @SuppressWarnings("UnresolvedMixinReference")
-    @Inject(method = "<init>(Lnet/minecraft/entity/passive/BeeEntity;)V", at = @At(value = "RETURN"))
+    @Inject(method = "<init>(Lnet/minecraft/world/entity/animal/Bee;)V", at = @At(value = "RETURN"))
     private void init(Bee beeEntity, CallbackInfo ci) {
         this.this$0 = beeEntity;
     }
@@ -39,13 +37,13 @@ public abstract class MixinUpdateBeehiveGoal {
     @Inject(at = @At(value = "HEAD"), method = "findNearbyHivesWithSpace()Ljava/util/List;", cancellable = true)
     public void findNearbyHivesWithSpace(CallbackInfoReturnable<List<BlockPos>> cir) {
         BlockPos blockpos = this$0.blockPosition();
-        PoiManager pointofinterestmanager = ((ServerLevel) this$0.level).getPoiManager();
-        Stream<PoiRecord> stream = pointofinterestmanager.getInRange(pointOfInterestType -> pointOfInterestType == PoiType.BEEHIVE
+        PoiManager poiManager = ((ServerLevel) this$0.level).getPoiManager();
+        Stream<PoiRecord> stream = poiManager.getInRange(pointOfInterestType -> pointOfInterestType == PoiType.BEEHIVE
                 || pointOfInterestType == PoiType.BEE_NEST
                 || pointOfInterestType == ModPOIs.TIERED_BEEHIVE_POI.get(), blockpos, 20, PoiManager.Occupancy.ANY);
         cir.setReturnValue(stream.map(PoiRecord::getPos)
                 .filter(((BeeEntityInvoker) this$0)::callDoesHiveHaveSpace)
                 .sorted(Comparator.comparingDouble(blockPos -> blockPos.distSqr(blockpos)))
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
